<resources>
    <string name="app_name">Calculendar</string>
    <string name="title_activity_calculendar_main">Calculendar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_calculendar_settings">App Settings</string>

    <string name="selected_count">%1$s selected</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_archive_enable"> Enable automatic clean up of items older than the threshold.
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Name Here</string>

    <string name="pref_title_personalization_message">Personalization Message</string>
    <string name="pref_default_personalization_message">Add email or other personal message here</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="devsList">
        <item>Kenneth Fechter</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data</string>

    <string name="pref_title_sync_frequency">Period(In Days) To Keep Item Before Archiving</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 Days</item>
        <item>30 Days</item>
        <item>60 Days</item>
        <item>90 Days</item>
        <item>120 Days</item>
        <item>150 Days</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
    </string-array>

    <string name="pref_title_archive_retention">Period(In Days) To Keep Archives Before Deleting</string>
    <string-array name="pref_sync_retention_titles">
        <item>15 Days</item>
        <item>30 Days</item>
        <item>60 Days</item>
        <item>90 Days</item>
        <item>120 Days</item>
        <item>150 Days</item>
    </string-array>
    <string-array name="pref_sync_retention_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Sync</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable FireBase Push Notifications (In App Only)</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="validation_error_start_date_must_occur_before_end_date">Validation Error: start date must occur before end date</string>
    <string name="sundays">Sundays</string>
    <string name="add_custom_date">Add Custom Date</string>
    <string name="custom_days">Custom Days</string>
    <string name="exclusion_options">Exclusion Options</string>
    <string name="saturdays">Saturdays</string>
    <string name="create_shortcut_short_label">Create</string>
    <string name="create_shortcut_long_label">Create calculation</string>
    <string name="archive_shortcut_short_label">Archives</string>
    <string name="archive_shortcut_long_label">View Archives</string>
    <string name="shortcut_disabled_message">This shortcut is disabled</string>
</resources>
