<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtStartDate"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEndDate"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/validationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/validation_error_start_date_must_occur_before_end_date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/exclusion_options"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkSaturdays"
                android:text="@string/saturdays"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkSundays"
                android:text="@string/sundays"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkCustomDays"
                android:text="@string/custom_days"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_custom_date"
            android:id="@+id/btnAddCustomDay"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"/>
        <ListView
            android:layout_width="match_parent"
            android:id="@+id/customDatesList"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</LinearLayout>